--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "homepage": "https://github.com/LambdaSchool/Sprint-Challenge--Redux#readme",
   "dependencies": {
-    "cors": "^2.8.4",
-    "express": "^4.16.3"
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "nodemon": "^1.17.2"
+    "nodemon": "^1.18.10"
   }
 }
